--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ body, html{
 #premios{
     background: url('../images/baclAll.jpg') fixed;
     height: 100%; 
+    overflow: hidden;
 }
 #char{position: relative;}
 #chara, #circle{
@@ -218,7 +219,8 @@ body, html{
     transition: 1s;
 }
 
-@media screen and (max-width: 1024px){
+
+@media screen and (max-width: 994px){
     #frase{
         padding-top: 60vw;
         font-size: 2.5vw;
@@ -353,7 +355,7 @@ body, html{
     }
 }
 
-@media screen and (min-width: 1400px){
+@media screen and (min-width: 1370px){
     #historia p{
         margin-top: 2vw;
         width: 50%;
@@ -422,7 +424,7 @@ body, html{
     }
     #linha2{ height: 40px;
         text-align: center;
-        padding: 2vw 0;
+        padding: 2vw 0 3vw 0;
         display: block;
     }
     #menu ul li{
@@ -451,11 +453,11 @@ body, html{
         width: 26%;
     }
     #linha2 img{
-        width: 1300px;
+        width: 1320px;
         height: 30px;
     }
     .content{
-        width: 1200px;
+        width: 1300px;
     }
     #video iframe{
         margin-bottom: 40px;
@@ -475,5 +477,20 @@ body, html{
         width: 1500px;
         text-align: center;
     }
+    .fas .fa-play{
+        position: absolute;
+        bottom: 70px;
+    }
 
+}
+
+@media screen and (min-width: 1280px) and (max-height: 800px){
+    #inicio{
+        background-position: 55% 100%;
+        background-size: 120%;
+    }
+    #premios{
+        background: url('../images/baclAll.jpg') fixed;
+        height: 94%; 
+    }
 }
