--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,15 @@ body, html{
 } 
 .logoAct{
     width: 12%;
-    margin: 35px 0px 0 30px;
-    border-right: 1px solid #fff;
-    padding-right: 30px;
+    margin: 3.2vw 0px 0 2.8vw;
+    border-right: 0.1vw solid #fff;
+    padding-right: 2.8vw;
 }
 .logoSek{
     width: 12%;
     margin: 35px 30px 0 0px;
     padding-left: 30px;
-    border-left: 1px solid #fff;
+    border-left: 0.1vw solid #fff;
 }
 #menuIcon{display: none;}
 #menu{
@@ -67,28 +67,28 @@ body, html{
 #menu ul li{
     list-style: none;
     display: inline-block;
-    padding: 15px 80px 10px 50px;
+    padding: 1.2vw 10vw 2vw 3.5vw;
     font-size: 2vw;
     margin: 0 10px;
     text-shadow: 1px 1px #000;
-    width: 200px;
+    width: 20%;
     align-content: center;
 }
 #menu ul li:hover{
     padding: 15px 80px 10px 40px;
     cursor: pointer;
-    letter-spacing: 2px;
+    letter-spacing: 0.2vw;
     transition: 1s
 }
 #menu ul li:nth-child(2){
     font-size: 2.6vw;
     padding: 15px 80px 30px 50px;
-    width: 240px;
+    width: 25%;
 }
 #menu ul li:nth-child(2):hover{padding: 15px 45px 30px 15px;}
 .back{
     background: url('../images/backJog1.png') no-repeat;
-    background-size: 185px;
+    background-size: 100%;
 }
 .back:nth-child(2){background-size: 215px;}
 #frase{
@@ -115,8 +115,8 @@ body, html{
 .btn{
     background: url('../images/backJog.png') no-repeat;
     background-position: center center;
-    background-size: 400px;
-    height: 115px;
+    background-size: 30%;
+    height: 15%;
     font-size: 4vw;
     text-shadow: 1px 1px #000;
     transition: 1s letter-spacing;
@@ -167,7 +167,7 @@ body, html{
 }
 #premios{
     background: url('../images/baclAll.jpg') fixed;
-    height: 100%; 
+    height: 92%; 
     overflow: hidden;
 }
 #char{position: relative;}
@@ -256,15 +256,14 @@ body, html{
 #comprar{
     background: url('../images/baclAll.jpg') fixed;
     text-align: center;
+    height: 100%;
+    position:relative; 
 }
 #comprarback{
     padding: 50px;
-    width: 0%;
+    width: 100%;
 }
-#comprar ul li img{
-    width: 800px;
-    border: 10px solid #6b0707;
-}
+
 
 footer{
     width: 100%;
@@ -273,6 +272,8 @@ footer{
     font-family: 'PT Serif', serif;
     font-size: 20px;
     padding: 20px 0;
+    position: absolute;
+    z-index: 100;
 }
 
 footer img{
@@ -283,9 +284,7 @@ footer img{
 }
 
 footer ul{
-    margin: 0 auto;
-    width: 60%;
-    border-top: 2px solid rgb(177, 177, 177);
+    width: 100%;
 }
 
 footer ul li{
@@ -293,14 +292,20 @@ footer ul li{
     display: inline-block;
     list-style: none;
     font-size: 40px;
+    color: #6b0707;
 }
 .brush3{
+    position:absolute;                  
+    bottom:-2px;                          
+    left:0;   
     transform: rotate(180deg);
 }
-
-
-
 @media screen and (max-width: 994px){
+    html, body{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
     #frase{
         padding-top: 60vw;
         font-size: 2.5vw;
@@ -319,9 +324,20 @@ footer ul li{
         border-top: 1px solid #fff;
         width: 100%;
         margin: 0;
-        padding:15px 0 10px 0;
+        padding: 3vw 0;
     }
-    #menu ul li:nth-child(2){background: none; font-size: 5vw; padding:15px 0 10px 0; width: 100%;}
+    #menu ul li:nth-child(2){background: none; font-size: 5vw; padding:0; margin: 0; width: 100%;letter-spacing: 0;}
+    #menu ul li:hover{
+        background: none;
+        font-size: 5vw;
+        text-align: center;
+        transition: 1s;
+        border-top: 1px solid #fff;
+        width: 100%;
+        margin: 0;
+        padding: 3vw 0;
+    }
+    #menu ul li:nth-child(2):hover{background: none; font-size: 5vw; padding:0; width: 100%;letter-spacing: 0; margin: 0;}
     #menu ul{
         display: none;
         position: absolute;
@@ -330,19 +346,21 @@ footer ul li{
         left: 0;
         background: rgba(0, 0, 0, 0.5);
         padding: 0;
+        letter-spacing: 0;
         width: 100%;
+        margin: 0;
     }
     #menuIcon{
-        display: block;
-        width: 30px;
+        width: 50px;
         transition: 1s;
     }
     #head{
         z-index: 2;
         position: fixed;
         vertical-align: middle;
-        padding: 3vw 5vw 0 5vw;
+        padding: 3vw 3vw 0vw 3vw;
         background: rgba(0, 0, 0);
+        width: 100%;
     }
     #historia p, #historia video{
         display: block;
@@ -352,7 +370,6 @@ footer ul li{
         width: 40vw;
         border-right: 0;
         margin: 0;
-        padding: 1vw 0 0 0 ;
         float: left;
     }
     #tile{display: block; position: absolute; width: 100%; bottom:0;}
@@ -384,7 +401,7 @@ footer ul li{
     }
     #historia iframe{
         width: 100%;
-        height: auto;
+        height: 200px;
     }
     #linha img{width: 80%;}
     .btn{
@@ -428,9 +445,17 @@ footer ul li{
     }
     #videoIni {padding-top: 50%;}
     .close{right: 7%; top: 4%}
+    #comprar{
+        background: url('../images/baclAll.jpg') fixed;
+        text-align: center;
+        height: 415px;
+    }
 }
 
 @media screen and (min-width: 1370px){
+    #trilhe{
+        width: 50%;
+    }
     #historia p{
         margin-top: 2vw;
         width: 50%;
@@ -474,7 +499,7 @@ footer ul li{
     .in{margin-top: 25px;}
     #circle{z-index: 0;}
     #historia video{
-        width: 29vw;
+        width: 25vw;
     }
     #historia video:nth-child(3){
         margin: 0vw 1.9vw 0 0vw;
@@ -528,7 +553,7 @@ footer ul li{
         padding-top: 10px;
         height: 165px;
     }
-    #historia{padding: 4vw 0;}
+    #historia{padding: 4vw 0}
     #inimigos{
         width: 1500px;
         text-align: center;
@@ -538,13 +563,34 @@ footer ul li{
         bottom: 70px;
     }
 }
-@media screen and (min-width: 1280px) and (max-height: 800px){
+@media screen and (min-width: 375px) and (max-height: 813px){
+    #premios{
+        height: 600px;
+    }
+}
+
+@media screen and (min-width: 375px) and (max-height: 825px){
+    #premios{
+        height: 650px;
+    }
+}
+
+@media screen and (min-width: 1365px) and (max-height: 770px){
+    #premios{
+        height: 98%; 
+        overflow: hidden;
+    }
+}
+
+
+
+@media screen and (min-width: 1280px) and (min-height: 790px){
     #inicio{
         background-position: 55% 100%;
         background-size: 120%;
     }
     #premios{
-        height: 90.8%; 
+        height: 91.2%; 
         overflow: hidden;
     }
     .close{right: 11.8%;}
