--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body, html{
     background: #000;
     color: #fff;
 }
+#none{display: none;}
 .ajusteBack{
     -webkit-background-size: cover;
     background-size: cover;
@@ -50,7 +51,7 @@ body, html{
 }
 .logoSek{
     width: 12%;
-    margin: 35px 30px 0 0px;
+    margin: 35px 0px 0 0px;
     padding-left: 30px;
     border-left: 0.1vw solid #fff;
 }
@@ -258,12 +259,8 @@ body, html{
     text-align: center;
     height: 100%;
     position:relative; 
+    background-size: 100%;
 }
-#comprarback{
-    padding: 50px;
-    width: 100%;
-}
-
 
 footer{
     width: 100%;
@@ -301,6 +298,7 @@ footer ul li{
     transform: rotate(180deg);
 }
 @media screen and (max-width: 994px){
+    
     html, body{
         margin: 0;
         padding: 0;
@@ -366,6 +364,10 @@ footer ul li{
         display: block;
         line-height: 2;
     }
+    .none{display: block; margin: 0 auto;}
+    #historia video:nth-child(3){
+        display: none;
+    }
     .logoAct{
         width: 40vw;
         border-right: 0;
@@ -394,7 +396,7 @@ footer ul li{
         width: 100%;
         font-size: 5vw;
     }
-    #historia video{ width: 90%; margin: 0}
+    #historia video{ width: 100%; margin: 2vw 0}
     #historia{
         text-align: center;
         padding: 30px 30px;
@@ -409,7 +411,7 @@ footer ul li{
         bottom: 10px;
         font-size: 12vw;
         background-size: 85%;
-        padding-top: 20px;
+        padding-top: 10px;
         z-index: 1;
     }
     #descricao{
@@ -449,6 +451,10 @@ footer ul li{
         background: url('../images/baclAll.jpg') fixed;
         text-align: center;
         height: 415px;
+    }
+    .ajustePlay{
+        top:40%;
+        left: 120%;
     }
 }
 
@@ -568,22 +574,22 @@ footer ul li{
         height: 600px;
     }
 }
-
-@media screen and (min-width: 375px) and (max-height: 825px){
+@media screen and (min-width: 400px) and (max-height: 823px){
     #premios{
-        height: 650px;
+        height: 600px;
     }
 }
-
+@media screen and (min-width: 375px) and (max-height: 825px){
+    #premios{
+        height: 663px;
+    }
+}
 @media screen and (min-width: 1365px) and (max-height: 770px){
     #premios{
         height: 98%; 
         overflow: hidden;
     }
 }
-
-
-
 @media screen and (min-width: 1280px) and (min-height: 790px){
     #inicio{
         background-position: 55% 100%;
@@ -601,6 +607,25 @@ footer ul li{
         list-style: none;
         font-size: 40px;
     }
+    #historia p{
+        width: 54%;
+        font-size: 1.2vw;
+        font-family: 'PT Serif', serif;
+    }
+    #historia video{width: 38%;}
+    #historia video:nth-child(3){
+        margin-right: 4vw;
+        margin-left: 1vw;
+    }
+    .none{display: none;}
+}
+
+@media screen and (min-width: 1900px) and (max-height: 1085px){
+    #premios{
+        height: 85%; 
+        overflow: hidden;
+    }
+    #frase{padding-top: 13.5vw;}
 }
 
 ::-webkit-scrollbar-track {
