--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body, html{
     background: #000;
     color: #fff;
 }
-#none{display: none;}
+.none{display: none;}
 .ajusteBack{
     -webkit-background-size: cover;
     background-size: cover;
@@ -45,7 +45,7 @@ body, html{
 } 
 .logoAct{
     width: 12%;
-    margin: 3.2vw 0px 0 2.8vw;
+    margin: 2vw 0px 0 2.8vw;
     border-right: 0.1vw solid #fff;
     padding-right: 2.8vw;
 }
@@ -161,15 +161,16 @@ body, html{
     top:-2px;
 }
 .brush2{
-    position: relative;
+    position: absolute;
     transform: rotate(180deg);
-    top: 55px;
+    bottom: 0px;
     z-index: 1;
 }
 #premios{
     background: url('../images/baclAll.jpg') fixed;
-    height: 92%; 
+    height: 100%; 
     overflow: hidden;
+    position: relative;
 }
 #char{position: relative;}
 #chara, #circle{
@@ -257,9 +258,24 @@ body, html{
 #comprar{
     background: url('../images/baclAll.jpg') fixed;
     text-align: center;
-    height: 100%;
+    height: 130%;
     position:relative; 
     background-size: 100%;
+}
+#circle2{
+    width: 30%;
+    position: absolute;
+    left: 34%;
+    z-index: 0;
+    transition: 1s;
+}
+.imgComprar:hover ~ #circle2{
+    transform: rotate(30deg);
+}
+.imgComprar{
+    width: 25%;padding-top: 2vw;
+    position: relative;
+    z-index: 1;
 }
 
 footer{
@@ -324,7 +340,7 @@ footer ul li{
         margin: 0;
         padding: 3vw 0;
     }
-    #menu ul li:nth-child(2){background: none; font-size: 5vw; padding:0; margin: 0; width: 100%;letter-spacing: 0;}
+    #menu ul li:nth-child(2){background: none; font-size: 5vw; padding: 3vw 0; margin: 0; width: 100%;letter-spacing: 0;}
     #menu ul li:hover{
         background: none;
         font-size: 5vw;
@@ -335,30 +351,32 @@ footer ul li{
         margin: 0;
         padding: 3vw 0;
     }
-    #menu ul li:nth-child(2):hover{background: none; font-size: 5vw; padding:0; width: 100%;letter-spacing: 0; margin: 0;}
+    #menu ul li:nth-child(2):hover{background: none; font-size: 5vw; padding: 3vw 0; width: 100%;letter-spacing: 0; margin: 0;}
     #menu ul{
         display: none;
         position: absolute;
-        top: 60px;
+        top: 64px;
         margin: 0;
         left: 0;
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba(0, 0, 0);
         padding: 0;
         letter-spacing: 0;
         width: 100%;
-        margin: 0;
     }
     #menuIcon{
-        width: 50px;
+        width: 40px;
         transition: 1s;
+        display: block;
+        float: right;
     }
     #head{
         z-index: 2;
         position: fixed;
-        vertical-align: middle;
+        vertical-align: top;
         padding: 3vw 3vw 0vw 3vw;
         background: rgba(0, 0, 0);
         width: 100%;
+        height: 10%;
     }
     #historia p, #historia video{
         display: block;
@@ -371,7 +389,7 @@ footer ul li{
     .logoAct{
         width: 40vw;
         border-right: 0;
-        margin: 0;
+        margin-top: 2vw;
         float: left;
     }
     #tile{display: block; position: absolute; width: 100%; bottom:0;}
@@ -450,11 +468,18 @@ footer ul li{
     #comprar{
         background: url('../images/baclAll.jpg') fixed;
         text-align: center;
-        height: 415px;
+        height: 85%;
     }
     .ajustePlay{
         top:40%;
         left: 120%;
+    }
+    #circle2{display: none;}
+    .imgComprar{
+        width: 75%;
+        padding-top: 8vw;
+        position: relative;
+        z-index: 1;
     }
 }
 
@@ -481,7 +506,7 @@ footer ul li{
     #logo img{width: 40%;}
     #logo img:hover{width: 42%;}
     #frase{font-size: 1vw;}
-    #premios{background-size: 120%;}
+    #premios{background-size: 120%}
 
     #chara, #circle{
         left: 150px;
@@ -578,6 +603,12 @@ footer ul li{
     #premios{
         height: 600px;
     }
+    #menu ul{
+        top: 74px;
+    }
+    #menuIcon{
+        width: 50px;
+    }
 }
 @media screen and (min-width: 375px) and (max-height: 825px){
     #premios{
@@ -590,14 +621,17 @@ footer ul li{
         overflow: hidden;
     }
 }
-@media screen and (min-width: 1280px) and (min-height: 790px){
+@media screen and (min-width: 1280px) and (min-height: 710px){
     #inicio{
         background-position: 55% 100%;
         background-size: 120%;
     }
     #premios{
-        height: 91.2%; 
+        height: 100%; 
         overflow: hidden;
+    }
+    #comprar{
+        height: 110%;
     }
     .close{right: 11.8%;}
     
@@ -620,12 +654,17 @@ footer ul li{
     .none{display: none;}
 }
 
+@media screen and (min-width: 1280px) and (min-height: 790px){
+    #comprar{
+        height: 130%;
+    }
+}
+
 @media screen and (min-width: 1900px) and (max-height: 1085px){
     #premios{
-        height: 85%; 
-        overflow: hidden;
+        height: 100%; 
     }
-    #frase{padding-top: 13.5vw;}
+    #frase{padding-top: 8.5vw;}
 }
 
 ::-webkit-scrollbar-track {
