--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,10 @@ body, html{
     top:-2px;
 }
 .brush2{
-    position: absolute;
+    position: relative;
     transform: rotate(180deg);
     bottom: 0px;
+    left: 0;
     z-index: 1;
 }
 #premios{
@@ -627,7 +628,7 @@ footer ul li{
         background-size: 120%;
     }
     #premios{
-        height: 100%; 
+        height: 96%; 
         overflow: hidden;
     }
     #comprar{
