--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {margin: 0; padding: 0; box-sizing: border-box;}
 
 body, html{
+    width: 100%;
     height: 100%;
     font-family: 'Metal Mania', cursive;
     background: #000;
@@ -161,16 +162,12 @@ body, html{
     top:-2px;
 }
 .brush2{
-    position: relative;
+    margin-bottom: -7px;
     transform: rotate(180deg);
-    bottom: 0px;
-    left: 0;
-    z-index: 1;
 }
 #premios{
     background: url('../images/baclAll.jpg') fixed;
-    height: 100%; 
-    overflow: hidden;
+    height: auto; 
     position: relative;
 }
 #char{position: relative;}
@@ -259,7 +256,6 @@ body, html{
 #comprar{
     background: url('../images/baclAll.jpg') fixed;
     text-align: center;
-    height: 130%;
     position:relative; 
     background-size: 100%;
 }
@@ -309,10 +305,8 @@ footer ul li{
     color: #6b0707;
 }
 .brush3{
-    position:absolute;                  
-    bottom:-2px;                          
-    left:0;   
     transform: rotate(180deg);
+    margin-bottom: -6px;
 }
 @media screen and (max-width: 994px){
     
@@ -450,8 +444,6 @@ footer ul li{
         transition: none
     } 
     #chara:hover ~ #circle{transform: rotate(0deg);}
-    .brush2{top: 64vw;}
-    #premios{height: 90%; }
     #circle{ z-index: 0}
     #inimigos{width: 80%;}
     .boxInimigo{display: block;}
@@ -469,7 +461,7 @@ footer ul li{
     #comprar{
         background: url('../images/baclAll.jpg') fixed;
         text-align: center;
-        height: 85%;
+        height: auto;
     }
     .ajustePlay{
         top:40%;
@@ -527,7 +519,6 @@ footer ul li{
         margin-right: 7vw;
         line-height: 1.6;
     }
-    .brush2{top: 32px;}
     .in{margin-top: 25px;}
     #circle{z-index: 0;}
     #historia video{
@@ -595,15 +586,7 @@ footer ul li{
         bottom: 70px;
     }
 }
-@media screen and (min-width: 375px) and (max-height: 813px){
-    #premios{
-        height: 600px;
-    }
-}
 @media screen and (min-width: 400px) and (max-height: 823px){
-    #premios{
-        height: 600px;
-    }
     #menu ul{
         top: 74px;
     }
@@ -611,28 +594,10 @@ footer ul li{
         width: 50px;
     }
 }
-@media screen and (min-width: 375px) and (max-height: 825px){
-    #premios{
-        height: 663px;
-    }
-}
-@media screen and (min-width: 1365px) and (max-height: 770px){
-    #premios{
-        height: 98%; 
-        overflow: hidden;
-    }
-}
 @media screen and (min-width: 1280px) and (min-height: 710px){
     #inicio{
         background-position: 55% 100%;
         background-size: 120%;
-    }
-    #premios{
-        height: 96%; 
-        overflow: hidden;
-    }
-    #comprar{
-        height: 110%;
     }
     .close{right: 11.8%;}
     
@@ -655,27 +620,12 @@ footer ul li{
     .none{display: none;}
 }
 
-@media screen and (min-width: 1280px) and (min-height: 790px){
-    #comprar{
-        height: 130%;
-    }
-}
-
 @media screen and (min-width: 1900px) and (max-height: 1085px){
-    #premios{
-        height: 100%; 
-    }
     #frase{padding-top: 8.5vw;}
 }
 
 @media screen and (width: 1920px) and (height: 1080px){
-    #premios{
-        height: 87%; 
-    }
     #frase{padding-top: 9.5vw;}
-    #comprar{
-        height: 110%;
-    }
 }
 
 ::-webkit-scrollbar-track {
