--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,9 @@ footer ul li{
 
 @media screen and (min-width: 1900px) and (max-height: 1085px){
     #frase{padding-top: 8.5vw;}
+    .btn{
+        padding-top: 4vw;
+    }
 }
 
 @media screen and (width: 1920px) and (height: 1080px){
@@ -630,7 +633,7 @@ footer ul li{
         top: 0vw;
     } 
     .btn{
-        padding-top: 6vw;
+        padding-top: 0.9vw;
     }
 }
 
