--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body, html{
 #menu ul li:nth-child(2){
     font-size: 2.6vw;
     padding: 15px 80px 30px 50px;
-    width: 25%;
+    width: 26%;
 }
 #menu ul li:nth-child(2):hover{padding: 15px 45px 30px 15px;}
 .back{
@@ -309,13 +309,7 @@ footer ul li{
     transform: rotate(180deg);
     margin-bottom: -6px;
 }
-@media screen and (max-width: 994px){
-    
-    html, body{
-        margin: 0;
-        padding: 0;
-        width: 100%;
-    }
+@media screen and (max-width: 994px){  
     #frase{
         padding-top: 60vw;
         font-size: 2.5vw;
@@ -379,9 +373,7 @@ footer ul li{
         line-height: 2;
     }
     .none{display: block; margin: 0 auto;}
-    #historia video:nth-child(3){
-        display: none;
-    }
+    #historia video:nth-child(3){display: none;}
     .logoAct{
         width: 40vw;
         border-right: 0;
@@ -475,12 +467,12 @@ footer ul li{
         position: relative;
         z-index: 1;
     }
+    #premios{height: 585px;}
+    .brush2{margin-bottom: -71vw;}
 }
 
 @media screen and (min-width: 1370px){
-    #trilhe{
-        width: 50%;
-    }
+    #trilhe{width: 50%;}
     #historia p{
         margin-top: 2vw;
         width: 50%;
@@ -522,15 +514,9 @@ footer ul li{
     }
     .in{margin-top: 25px;}
     #circle{z-index: 0;}
-    #historia video{
-        width: 25vw;
-    }
-    #historia video:nth-child(3){
-        margin: 0vw 1.9vw 0 0vw;
-    }
-    #linha{
-        display: none;
-    }
+    #historia video{width: 25vw;}
+    #historia video:nth-child(3){margin: 0vw 1.9vw 0 0vw;}
+    #linha{display: none;}
     #linha2{ height: 40px;
         text-align: center;
         padding: 2vw 0 3vw 0;
@@ -588,12 +574,9 @@ footer ul li{
     }
 }
 @media screen and (min-width: 400px) and (max-height: 823px){
-    #menu ul{
-        top: 74px;
-    }
-    #menuIcon{
-        width: 50px;
-    }
+    #menu ul{top: 74px;}
+    #menuIcon{width: 50px;}
+    #premios{height: 665px;}
 }
 @media screen and (min-width: 1280px) and (min-height: 710px){
     #inicio{
@@ -620,22 +603,16 @@ footer ul li{
     }
 }
 
-@media screen and (min-width: 1900px) and (max-height: 1085px){
-    #frase{padding-top: 8.5vw;}
-}
-
+@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 8.5vw;}}
 @media screen and (width: 1920px) and (height: 1080px){
     #frase{padding-top: 9.5vw;}
-    #chara, #circle{
-        top: 0vw;
-    } 
-    .btn{
-        padding-top: 0.9vw;
-    }
+    .btn{padding-top: 0.9vw;}
 }
 
 @media screen and (width: 375px) and (height: 812px){
     #frase{padding-top: 86.5vw;}
+    #premios{height: 600px;}
+    .brush2{margin-bottom: -68vw;}
 }
 
 ::-webkit-scrollbar-track {
