--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ footer ul li{
         margin-left: 1vw;
     }
 }
-@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;}}
+@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} #btn{height: 88%; width: 10%;}}
 @media screen and (width: 1920px) and (height: 1080px){
     #frase{padding-top: 15%;}
     .btn{padding-top: 0.9vw;}
