--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body, html{
 .btn span{
     background: url('../images/backJog.png') no-repeat;
     background-position: center center;
-    background-size: cover;
+    background-size: 100%;
     height: 16%;
     font-size: 4vw;
     text-shadow: 1px 1px #000;
@@ -560,7 +560,7 @@ footer ul li{
         margin-left: 1vw;
     }
 }
-@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} #btn{height: 88%; width: 10%;}}
+@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} }
 @media screen and (width: 1920px) and (height: 1080px){
     #frase{padding-top: 15%;}
     .btn{padding-top: 0.9vw;}
@@ -572,6 +572,7 @@ footer ul li{
     .btn{
         padding-top: 7vw;
     }
+    #btn{height: 88%; width: 10%;}
 }
 @media screen and (width: 411px) and (height: 823px){
     #head{height: auto;}
