--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body, html{
 #logo img:hover{
     width: 52%;
 }
-.btn span{
+.btn{
     background: url('../images/backJog.png') no-repeat;
     background-position: center center;
     background-size: 100%;
@@ -381,7 +381,7 @@ footer ul li{
         display: absolute;
         bottom: 10px;
         font-size: 10vw;
-        background-size: cover;
+        background-size: 100%;
         padding-top: 4%;
         z-index: 1;
         width: 80%;
