--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ footer ul li{
     #trilhe{width: 50%;}
     #historia p{
         margin-top: 2vw;
-        width: 50%;
+        width: 55%;
         font-size: 1.2vw;
         font-family: 'PT Serif', serif;
     }
@@ -516,9 +516,9 @@ footer ul li{
     }
     #frase{padding-top: 10%;}
     .btn{
-        background-size: cover;
+        font-size: 4.5vw;
         height: 18.5%;
-        width: 32%;
+        width: 35%;
     }
     #historia{padding: 4vw 0}
     #inimigos{
@@ -563,7 +563,7 @@ footer ul li{
 @media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} }
 @media screen and (width: 1920px) and (height: 1080px){
     #frase{padding-top: 15%;}
-    .btn{padding-top: 0.9vw;}
+    .btn{padding-top: 0.9vw; background-size: cover;}
 }
 @media screen and (width: 375px) and (height: 812px){
     #frase{padding-top: 90%;}
