--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ footer ul li{
     #logo img{width: 40%;}
     #logo img:hover{width: 42%;}
     #frase{font-size: 1vw; }
-    #premios{background-size: 120%}
+    #premios{background-size: 120%;}
 
     #chara, #circle{
         left: 150px;
@@ -570,6 +570,11 @@ footer ul li{
     }
     #btn{height: 88%; width: 10%;}
 }
+@media screen and (width: 375px) and (height:667px){
+    .brush2{margin-bottom: -68vw;}
+    #premios{height: 600px;}
+}
+
 @media screen and (width: 411px) and (height: 823px){
     #head{height: auto;}
     #menuIcon{margin-top: 3.5vw;}
