--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body, html{
     background: #000;
     color: #fff;
 }
+.perna{display: none;}
 .none{display: none;}
 .textC{text-align: center;}
 .ajusteBack{
@@ -15,9 +16,15 @@ body, html{
     background-repeat: no-repeat;
     background-position: center center;
 }
-.ajusteWidth{ width: 100%; }
+.ajusteWidth{ width: 100%;}
 #head{margin: 0 auto;transition: 1s;}
 
+#centro{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translate(0%, -50%);
+}
 #tile{display: none;}
 
 #linha{margin: 2vw 0;}
@@ -83,7 +90,6 @@ body, html{
 }
 #frase{
     width: 100%;
-    padding-top: 12%;
     font-size: 1.3vw;
     transition: all 2s ease;
     font-family: 'PT Serif', serif;
@@ -285,7 +291,6 @@ footer ul li{
 }
 @media screen and (max-width: 1024px){  
     #frase{
-        padding-top: 75%;
         font-size: 2.5vw;
         text-shadow: 1px 1px #000;
     }
@@ -388,15 +393,9 @@ footer ul li{
         margin: 0;
         padding: 15px 30px;
     }
+    .perna{width: 80%; margin-left: 9%; display: block;}
     #chara, #circle{
-        position: absolute;
-        top: 75vw;
-        left: 50px;
-        width: 70vw;
-        z-index: 1;
-        transition: 1s;
-        overflow: hidden;
-        transition: none
+        display: none;
     } 
     #chara:hover ~ #circle{transform: rotate(0deg);}
     #circle{ z-index: 0}
@@ -429,8 +428,8 @@ footer ul li{
         position: relative;
         z-index: 1;
     }
-    #premios{height: 585px;}
-    .brush2{margin-bottom: -71vw;}
+    #premios{height: auto;}
+    .brush2{position: absolute; left: 0; bottom: 0;}
     footer ul li{
         width: 20%;
     }
@@ -510,7 +509,6 @@ footer ul li{
         height: 700px;
         width: 1250px;
     }
-    #frase{padding-top: 10%;}
     .btn{
         font-size: 4.5vw;
         height: 18.5%;
@@ -529,8 +527,7 @@ footer ul li{
 
 @media screen and (min-width: 400px) and (max-height: 823px){
     #menu ul{top: 74px;}
-    #menuIcon{width: 50px;}
-    #premios{height: 665px;}
+    #premios{height: auto;}
 }
 @media screen and (min-width: 1280px) and (max-height: 730px){
     #inicio{
@@ -558,21 +555,13 @@ footer ul li{
 }
 @media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} }
 @media screen and (width: 1920px) and (height: 1080px){
-    #frase{padding-top: 15%;}
     .btn{padding-top: 0.9vw; background-size: cover;}
 }
 @media screen and (width: 375px) and (height: 812px){
-    #frase{padding-top: 90%;}
-    #premios{height: 600px;}
-    .brush2{margin-bottom: -68vw;}
     .btn{
         padding-top: 7vw;
     }
     #btn{height: 88%; width: 10%;}
-}
-@media screen and (width: 375px) and (height:667px){
-    .brush2{margin-bottom: -68vw;}
-    #premios{height: 600px;}
 }
 
 @media screen and (width: 411px) and (height: 823px){
@@ -580,7 +569,6 @@ footer ul li{
     #menuIcon{margin-top: 3.5vw;}
 }
 @media screen and (width: 768px) and (max-height: 1030px){
-    #frase{padding-top: 50%;}
     #head{height: auto;}
     #menuIcon{margin-top: 3vw; width: 12%;}
     #historia{padding: 3vw;}
@@ -589,7 +577,6 @@ footer ul li{
         width: 80%;
         height: 400px;
     }
-    #premios{height: 112%;}
     #chara, #circle{
         top: 500px;
         left: 100px;
@@ -621,7 +608,6 @@ footer ul li{
 }
 
 @media screen and (width: 1024px) and (max-height: 1366px){
-    #frase{padding-top: 52%;}
     #menuIcon{margin-top: 3vw; width: 12%;}
     #historia{padding: 3vw;}
     #historia iframe{
@@ -629,11 +615,7 @@ footer ul li{
         width: 80%;
         height: 400px;
     }
-    #premios{height: 112%; background-size: cover; background-position: center center;}
-    #chara, #circle{
-        top: 670px;
-        left: 100px;
-    } 
+    #premios{height: auto; background-size: cover; background-position: center center;}
     .btn{
         padding-top: 1vw;
     }
@@ -658,14 +640,8 @@ footer ul li{
         width: 100%;
         height: 500vw;
     }
-    #comprar{
-        background-size: cover;
-    }
-    .brush2{
-        margin-bottom: -72%;
-    }
+    #comprar{background-size: cover;}
 }
-
 
 ::-webkit-scrollbar-track {
     background-color:#000;
