--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body, html{
     position: relative;
     background-position: 50% 50%;
     width: 100%;
+    z-index: 1;
 }
 #para{
     background: url('../images/MadeupRapidChuckwalla-max-1mb.gif');
@@ -105,18 +106,18 @@ body, html{
 #logo img:hover{width: 52%;}
 .btn{
     background: url('../images/backJog.png') no-repeat;
-    background-position: center center;
-    background-size: 100%;
+    background-size:100%;
     height: 16%;
     font-size: 4vw;
     text-shadow: 1px 1px #000;
     transition: 1s letter-spacing;
-    padding-top: 0.5vw;
+    padding-top: 1vw;
     position: absolute;
-    bottom: -2%;
+    bottom: -4%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 33%;
+    width: 30%;
+    background-clip:padding-box;
 }
 .btn:hover{
     cursor: pointer;
@@ -333,6 +334,7 @@ footer ul li{
         background: rgba(0, 0, 0);
         width: 100%;
         height: auto;
+        z-index: 1000;
     }
     #historia p, #historia video{
         display: block;
@@ -382,10 +384,9 @@ footer ul li{
         display: absolute;
         bottom: 10px;
         font-size: 10vw;
-        background-size: 100%;
-        padding-top: 4%;
+        padding-top: 3%;
         z-index: 1;
-        width: 80%;
+        width: 85%;
     }
     #descricao{
         font-size: 4vw;
@@ -426,7 +427,7 @@ footer ul li{
         width: 75%;
         padding-top: 8vw;
         position: relative;
-        z-index: 1;
+        z-index: 0;
     }
     #premios{height: auto;}
     .brush2{position: absolute; left: 0; bottom: 0;}
@@ -456,7 +457,7 @@ footer ul li{
     #logo img{width: 40%;}
     #logo img:hover{width: 42%;}
     #frase{font-size: 1vw; }
-    #premios{background-size: 120%;}
+    #premios{background-size: cover;}
 
     #chara, #circle{
         left: 150px;
@@ -553,20 +554,32 @@ footer ul li{
         margin-left: 1vw;
     }
 }
-@media screen and (min-width: 1900px) and (max-height: 1085px){#frase{padding-top: 10%;} }
+@media screen and (min-width: 1900px) and (max-height: 1085px){
+    #frase{padding-top: 10%;} 
+    #centro{
+    position: absolute;
+    width: 100%;
+    top: 35%;
+    transform: translate(0%, -50%);}
+    #descricao{
+        margin-top: 8vw;
+    }
+}
 @media screen and (width: 1920px) and (height: 1080px){
-    .btn{padding-top: 0.9vw; background-size: cover;}
+    .btn{padding-top: 0.9vw; font-size: 4.5vw;}
 }
 @media screen and (width: 375px) and (height: 812px){
     .btn{
-        padding-top: 7vw;
+        background-size: 100%;
+        height: 10%;
     }
-    #btn{height: 88%; width: 10%;}
+    
 }
 
 @media screen and (width: 411px) and (height: 823px){
     #head{height: auto;}
     #menuIcon{margin-top: 3.5vw;}
+    .btn{background-size: 100%;}
 }
 @media screen and (width: 768px) and (max-height: 1030px){
     #head{height: auto;}
@@ -603,11 +616,11 @@ footer ul li{
         height: 100%;
     }
     .btn{
-        padding-top: 1vw;
+        padding-top: 2vw;
     }
 }
 
-@media screen and (width: 1024px) and (max-height: 1366px){
+@media screen and (width: 1024px) and (height: 1366px){
     #menuIcon{margin-top: 3vw; width: 12%;}
     #historia{padding: 3vw;}
     #historia iframe{
@@ -617,7 +630,9 @@ footer ul li{
     }
     #premios{height: auto; background-size: cover; background-position: center center;}
     .btn{
-        padding-top: 1vw;
+        padding-top: 2.5vw;
+        width: 70%;
+        font-size: 10vw;
     }
     #historia p, #historia video{
         padding: 0 5vw;
@@ -643,6 +658,30 @@ footer ul li{
     #comprar{background-size: cover;}
 }
 
+@media screen and (min-width: 550px) and (max-width: 1024px) and (min-height: 320px) and (max-height: 820px){
+    .logoAct{
+        width: 26%;
+    }
+    #menuIcon{
+        width: 8%;
+    }
+    #centro{
+        width: 68%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    #frase{
+        font-size: 2vw;
+    }
+    .btn{
+        font-size: 4vw;
+        width: 30%;
+        padding-top: 1vw;
+    }
+    .content{
+        font-size: 0.1vw;
+    }
+}
 ::-webkit-scrollbar-track {
     background-color:#000;
 }
