--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ body, html{
     text-align: center;
     position:relative; 
     background-size: 100%;
+    width: 100%;
 }
 #circle2{
     width: 30%;
@@ -263,6 +264,14 @@ body, html{
     width: 25%;padding-top: 2vw;
     position: relative;
     z-index: 1;
+}
+#plat{
+    display: inline;
+    margin: 10px 40px;
+    transition: 1s;
+}
+#plat:hover{
+    width: 110%;
 }
 footer{
     color: rgb(177, 177, 177);
